cmake_minimum_required (VERSION 2.6)

project (MapLab)

add_subdirectory (min_common_lib) 
add_subdirectory (min_common_lib_test) 

add_subdirectory (strings_lib)
add_subdirectory (strings_lib_test)

add_subdirectory (seqdata_lib)
add_subdirectory (seqdata_lib_test)

add_subdirectory (context_align)


